Try_A100/ogbg-ppa/stdout/1672034007_6fa64202477020bcba460f933726586ec95785ca.out
  File "/home/mingqi/workspace/spectral_rotation/ogbg_a/graphml/ogbg/ppa/./main.py", line 200
    train_loader = DataLoader(dataset[torch.tensor([: 8000])], batch_size=config.hyperparams.batch_size, shuffle=True,
                                                    ^
SyntaxError: invalid syntax
